# euler

./: Cargo.toml  README.md  flake.nix
.github/workflows/: general.yaml
crates/integer/: Cargo.toml
crates/iter/: Cargo.toml
crates/iter/src/: lib.rs
crates/math/: Cargo.toml
crates/parse/: Cargo.toml
crates/seq/: Cargo.toml
crates/seq/src/: lib.rs  prime.rs
crates/traits/: Cargo.toml
crates/traits/src/: palindrome.rs
crates/utils/: Cargo.toml
integer/: Cargo.toml
integer/src/: lib.rs
iter/: Cargo.toml
iter/src/: lib.rs
math/: Cargo.toml
math/src/: lib.rs  math.rs  num.rs
parse/: Cargo.toml
parse/src/: lib.rs
seq/: Cargo.toml
seq/src/: fib.rs  fibonacci.rs  figurative.rs  hex.rs  lib.rs  pent.rs  prime.rs  tri.rs
src/: lib.rs  pr_0001.rs  pr_0002.rs  pr_0003.rs  pr_0004.rs  pr_0005.rs  pr_0006.rs  pr_0007.rs  pr_0008.rs  pr_0009.rs  pr_0010.rs  pr_0011.rs  pr_0012.rs  pr_0013.rs  pr_0014.rs  pr_0015.rs  pr_0016.rs  pr_0017.rs  pr_0018.rs  pr_0019.rs  pr_0020.rs  pr_0021.rs  pr_0022.rs  pr_0023.rs  pr_0024.rs  pr_0025.rs  pr_0026.rs  pr_0027.rs  pr_0028.rs  pr_0029.rs  pr_0030.rs  pr_0031.rs  pr_0032.rs  pr_0033.rs  pr_0034.rs  pr_0035.rs  pr_0036.rs  pr_0037.rs  pr_0038.rs  pr_0039.rs  (+13 more)
traits/src/: lib.rs  palindrome.rs
utils/: Cargo.toml
utils/src/: lib.rs
